<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/favorites"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <StackView
            android:id="@+id/stack_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:loopViews="true" />

        <Button
            android:id="@+id/btRefresh"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:text="@string/refresh"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/data_kosong"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />


</FrameLayout>